--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,5 +6,32 @@
 </head>
 <body>
 
+<script>
+    function addScript( src,callback) {
+        let s = document.createElement( 'script' );
+        s.setAttribute( 'src', src );
+        s.onload=callback;
+        document.body.appendChild( s );
+    }
+    const WS_PORT = '3000';
+    const SOCKET_IO_CLIENT_URL = '/socket.io/socket.io.js';
+    let scriptToLoad = `//${window.location.hostname}:${WS_PORT}${SOCKET_IO_CLIENT_URL}`;
+    addScript(scriptToLoad,banana);
+
+    function banana() {
+        let socket = io('http://localhost:3000');
+        socket.on('connect', function(){
+            console.log('conectado');
+        });
+        socket.on('event', function(data){
+            console.log(data);
+        });
+        socket.on('disconnect', function(){
+            console.log('desconectado');
+        });
+    }
+
+</script>
+
 </body>
 </html>
